--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D 二中紅鯨吹牛不耍老千 耍老千是Gay</title>
+    <title>紅鯨二八吹牛耍老千是Gay</title>
     <style>
         :root {
             --dice-size: 60px;
